Переподключила style.css, для корректного отображения стилей. Подключила шрифт roboto. Откорректировала свой блок html.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,16 +1,25 @@
 /* Блок Вики */
-main aside{
+#search {
     background-color: #181818;
     display: inline-flex;
     flex-wrap: nowrap;
     align-items: center;
-    padding: 25px 50px 25px 50px;
+    padding: 25px 10px 25px 40px;
+}
+
+#search #under{
+    padding-right: 0px;
+}
+
+.opacity{
+    position: relative;
+    right: 25px;
 }
 
 .icon{
     width: 30px;
     height: 30px;
-    padding-right: 7px;
+    padding-right: 15px;
 }
 
 .icon_search{
@@ -20,14 +29,18 @@ main aside{
 }
 
 .cross{
-    width: 12px;
-    height: 12px;
+    width: 1.1em;
+    height: 1.1em;
+    margin-top: 4px;
     margin-left: 4px;
+    position: relative;
+
 }
 
 main span{
     color: #FFFFFF;
     font-size: 20px;
+    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Блок Лены */
