--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -316,3 +316,146 @@ h2{
 main{
     background-color: #FAFAFA;
 }
+
+/* Блок Светы */
+header {
+  background-color: #000000;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width:100%;
+       }
+
+.menu {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items:center;
+  background-color: #000000;
+  color: #FFFFFF;
+  width: 100%;
+         }    
+
+.logo {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+               }
+
+.img_logo {
+  height: 40px;
+  width: 40px;
+  padding-right:11px;
+  padding-left:20px;
+       }
+
+.logo_name {
+  font-family: 'Inter'; sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 100%;
+  text-align: center;
+  height: 24px;
+  width: 114px;
+  padding-right:50px;
+  color:#FFFFFF;
+       }
+
+.list {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: center;
+  font-family: 'Effra'; sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+  color: #FFFFFF;
+  width:488px;
+  height:18px;
+  list-style-type: none;
+  padding-right:50px;
+     }
+
+
+  .list_item_1 {
+      flex:none;
+      order: 0;
+      flex-grow: 0;
+              }
+
+  .list_item_2 {
+      flex:none;
+      order: 1;
+      flex-grow: 0;
+              }
+  
+  .list_item_3 {
+      flex:none;
+      order: 2;
+      flex-grow: 0;
+               }
+
+  .list_item_4 {
+      flex:none;
+      order: 3;
+      flex-grow: 0;
+              }
+
+  .list_item_5 {
+      flex:none;
+      order: 4;
+      flex-grow: 0;
+               }
+
+  .list_item_6 {
+      flex:none;
+      order: 5;
+      flex-grow: 0;
+             }    
+
+.menu_buttons {
+  display:flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+  align-items: center;
+  font-family: 'Effra';sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+}
+.button_login {
+  width: 54px;
+  height: 18px;
+  background-color: #000000;
+  color: #FFFFFF;
+  margin-right:10px;
+         }
+
+.button_register {
+  width: 120px;
+  height: 42px;
+  background-color: #FFFFFF;
+  color:#000000; 
+  border-radius: 40px;
+   }
+
+   a:hover {
+      color: rgb(43, 10, 232)
+  }
+  
+  a:link {
+      color: rgb(241, 7, 163)
+  }
+  
+  a:visited {
+      color: aqua
+  }
+
