--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -86,13 +86,24 @@ body {
   left: 828px;
   top: 466px;
 }
+
 /* Блок Вики */
+.requests{
+  background-color: #000000;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  padding: 5%;
+}
+
 #search {
   background-color: #181818;
-  display: inline-flex;
+  display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  padding: 25px 10px 25px 40px;
+  padding: 1.3em 0.9em 1.3em 3em;
+  box-shadow: 20px 20px 15px 3px rgba(0, 0, 0, 2);
 }
 
 #search #under {
@@ -105,14 +116,15 @@ body {
 }
 
 .icon {
-  width: 30px;
-  height: 30px;
-  padding-right: 15px;
+  width: 1.5em;
+  height: 1.5em;
+  padding-right: 0.8em;
 }
 
 .icon_search {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 .cross {
@@ -125,10 +137,11 @@ body {
 
 main span {
   color: #ffffff;
-  font-size: 20px;
+  font-size: 18px;
   font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+/* Конец блока Вики */
 
 /* Блок Лены */
 .block-green {
