--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -94,25 +94,28 @@ body {
   flex-wrap: nowrap;
   flex-direction: row;
   justify-content: center;
-  padding: 5%;
+  padding: 7em;
 }
 
-#search {
+.social_media{
   background-color: #181818;
   display: flex;
+  position: relative;
   flex-wrap: nowrap;
   align-items: center;
-  padding: 1.3em 0.9em 1.3em 3em;
-  box-shadow: 20px 20px 15px 3px rgba(0, 0, 0, 2);
+  width: 15em;
+  height: 4em;
+  padding: 0.4em 0.3em 0.4em 1.5em;
+  box-shadow: 5px 5px 15px 3px rgba(0, 0, 0, 2);
 }
 
-#search #under {
+/* .social_media #under, .social_media #under{
   padding-right: 0px;
-}
+} */
 
 .opacity {
   position: relative;
-  right: 25px;
+  right: 22px;
 }
 
 .icon {
@@ -125,21 +128,63 @@ body {
   display: flex;
   align-items: center;
   white-space: nowrap;
+  overflow: hidden;
+  
 }
 
 .cross {
-  width: 1.1em;
-  height: 1.1em;
+  width: 1em;
+  height: 1em;
   margin-top: 4px;
   margin-left: 4px;
   position: relative;
+  z-index: 1;
 }
 
 main span {
   color: #ffffff;
   font-size: 18px;
-  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.social_media::after {
+  content: ''; /* Создаем псевдоэлемент */
+  position: absolute;
+  top: 0;
+  right: 0px;
+  width: 90px; /* Ширина градиента */
+  height: 100%;
+  background: linear-gradient(to left, rgb(24, 24, 24), rgba(24, 24, 24, 0.548)); /* Плавное затухание */
+}
+
+#twitter{
+  position: relative;
+  bottom: 60px;
+  left: 100px;
+  transform: rotate(-4deg);
+  z-index: 4;
+}
+
+#pinterest{
+  position: relative;
+  transform: rotate(2deg);
+  z-index: 3;
+}
+
+#facebook{
+  position: relative;
+  transform: rotate(-2deg);
+  right: 45px;
+  bottom: 50px;
+  z-index: 2;
+}
+
+#dribling{
+  position: relative;
+  transform: rotate(4deg);
+  right: 85px;
+  z-index: 1;
 }
 /* Конец блока Вики */
 
