Света добавила цвет для меню в header

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -466,5 +466,13 @@ header {
   border-radius: 40px;
 }
 
+a:hover {
+  color: rgb(43, 10, 232)
+}
+
+a:visited {
+  color: rgb(34, 240, 240);
+}
+
 /* Окончание блока Светы */
 
