--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,7 +13,7 @@
 @font-face {
   font-family: "EffraLight";
   src: url(/assets/fonts/EffraLight.ttf);
-  font-weight:400;
+  font-weight: 400;
 }
 
 body {
@@ -55,6 +55,10 @@ body {
   line-height: 150%;
 }
 
+.buttomTekst {
+  display: flex;
+  justify-content: center;
+}
 .buttonGetStarted {
   display: flex;
   justify-content: center;
@@ -69,10 +73,6 @@ body {
 
   background: #a8ff35;
   border-radius: 40px;
-
-  /* Get Started 🔥 */
-  width: 116px;
-  height: 25px;
 
   font-family: "Effra";
   font-weight: 700;
@@ -94,7 +94,7 @@ body {
 }
 
 /* Блок Вики */
-.requests{
+.requests {
   background-color: #000000;
   display: flex;
   flex-wrap: nowrap;
@@ -103,7 +103,7 @@ body {
   padding: 7em;
 }
 
-.social_media{
+.social_media {
   background-color: #181818;
   display: flex;
   position: relative;
@@ -135,7 +135,6 @@ body {
   align-items: center;
   white-space: nowrap;
   overflow: hidden;
-  
 }
 
 .cross {
@@ -150,21 +149,26 @@ body {
 main span {
   color: #ffffff;
   font-size: 18px;
-  font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .social_media::after {
-  content: ''; /* Создаем псевдоэлемент */
+  content: ""; /* Создаем псевдоэлемент */
   position: absolute;
   top: 0;
   right: 0px;
   width: 90px; /* Ширина градиента */
   height: 100%;
-  background: linear-gradient(to left, rgb(24, 24, 24), rgba(24, 24, 24, 0.548)); /* Плавное затухание */
+  background: linear-gradient(
+    to left,
+    rgb(24, 24, 24),
+    rgba(24, 24, 24, 0.548)
+  ); /* Плавное затухание */
 }
 
-#twitter{
+#twitter {
   position: relative;
   bottom: 60px;
   left: 100px;
@@ -172,13 +176,13 @@ main span {
   z-index: 4;
 }
 
-#pinterest{
+#pinterest {
   position: relative;
   transform: rotate(2deg);
   z-index: 3;
 }
 
-#facebook{
+#facebook {
   position: relative;
   transform: rotate(-2deg);
   right: 45px;
@@ -186,7 +190,7 @@ main span {
   z-index: 2;
 }
 
-#dribling{
+#dribling {
   position: relative;
   transform: rotate(4deg);
   right: 85px;
@@ -357,28 +361,28 @@ main span {
   position: relative;
   overflow: visible;
 }
-.container{
-    height: 124px;
-    width: 1180px;
-    display: flex;
-    margin: 24px;
+.container {
+  height: 124px;
+  width: 1180px;
+  display: flex;
+  margin: 24px;
 }
-h2{
-    font-size: 55px;
-    font-family: Effra;
-    font-style: normal;
-    text-align: center;
-    background-color: #FAFAFA;
-    width: 1180px;
-    height: 70px;
-    justify-content: space-evenly;
+h2 {
+  font-size: 55px;
+  font-family: Effra;
+  font-style: normal;
+  text-align: center;
+  background-color: #fafafa;
+  width: 1180px;
+  height: 70px;
+  justify-content: space-evenly;
 }
-.image{
-    margin: auto;
-    gap:24px;
+.image {
+  margin: auto;
+  gap: 24px;
 }
-main{
-    background-color: #FAFAFA;
+main {
+  background-color: #fafafa;
 }
 
 /* блок Нади */
@@ -408,7 +412,6 @@ main{
   color: white;
 }
 
-
 /* Переключатель (Monthly/Yearly) */
 .switcher {
   display: flex;
@@ -421,8 +424,8 @@ main{
 }
 
 .text-discount {
-font-size: 14px;
-font-family: cursive;   
+  font-size: 14px;
+  font-family: cursive;
 }
 
 .toggle-container {
@@ -467,14 +470,14 @@ font-family: cursive;
   width: 24px;
   left: 3px;
   bottom: 3px;
-  background-color: #A8FF35;
+  background-color: #a8ff35;
   transition: 0.4s;
   border-radius: 74.25px;
 }
 
 /* Состояние включено */
 input:checked + .slider {
-  background-color: #A8FF35;
+  background-color: #a8ff35;
 }
 
 input:checked + .slider::before {
@@ -504,7 +507,7 @@ input:checked + .slider::before {
 }
 
 .card.regular {
-  background-color: #A8FF35;
+  background-color: #a8ff35;
   color: black;
 }
 
@@ -554,7 +557,7 @@ input:checked + .slider::before {
 .card .btn {
   margin-top: 15px;
   padding: 10px 20px;
-  background-color: #A8FF35;
+  background-color: #a8ff35;
   color: black;
   border: none;
   border-radius: 25px;
@@ -572,7 +575,7 @@ input:checked + .slider::before {
   border-radius: 25px;
   cursor: pointer;
   text-transform: uppercase;
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .card .btn:hover {
@@ -585,25 +588,25 @@ input:checked + .slider::before {
 /* Блок Светы */
 header {
   background-color: #000000;
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width:100%;
+  width: 100%;
 }
 
 .menu {
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
-  align-items:center;
+  align-items: center;
   background-color: #000000;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 100%;
-}    
+}
 
 .logo {
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
 }
@@ -611,12 +614,12 @@ header {
 .img_logo {
   height: 40px;
   width: 40px;
-  padding-right:11px;
-  padding-left:20px;
+  padding-right: 11px;
+  padding-left: 20px;
 }
 
 .logo_name {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-size: 24px;
@@ -624,85 +627,84 @@ header {
   text-align: center;
   height: 24px;
   width: 114px;
-  padding-right:50px;
-  color:#FFFFFF;
+  padding-right: 50px;
+  color: #ffffff;
 }
 
 .list {
-  position:relative;
-  display:flex;
+  position: relative;
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: nowrap;
   align-items: center;
-  font-family: 'Effra', sans-serif;
+  font-family: "Effra", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
   text-align: center;
-  color: #FFFFFF;
-  width:488px;
-  height:18px;
+  color: #ffffff;
+  width: 488px;
+  height: 18px;
   list-style-type: none;
-  padding-right:50px;
+  padding-right: 50px;
 }
 
-
-  .list_item_1 {
-    color: #FFFFFF;
-      flex:none;
-      order: 0;
-      flex-grow: 0;
-      text-decoration: none;
-              }
-
-  .list_item_2 {
-    color: #FFFFFF;
-      flex:none;
-      order: 1;
-      flex-grow: 0;
-      text-decoration: none;
-              }
-  
-  .list_item_3 {
-    color: #FFFFFF;
-      flex:none;
-      order: 2;
-      flex-grow: 0;
-      text-decoration: none;
-  }
-
-  .list_item_4 {
-    color: #FFFFFF;
-      flex:none;
-      order: 3;
-      flex-grow: 0;
-      text-decoration: none;
-              }
-
-  .list_item_5 {
-    color: #FFFFFF;
-      flex:none;
-      order: 4;
-      flex-grow: 0;
-      text-decoration: none;
+.list_item_1 {
+  color: #ffffff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  text-decoration: none;
 }
 
-  .list_item_6 {
-    color: #FFFFFF;
-      flex:none;
-      order: 5;
-      flex-grow: 0;
-}    
+.list_item_2 {
+  color: #ffffff;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  text-decoration: none;
+}
+
+.list_item_3 {
+  color: #ffffff;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  text-decoration: none;
+}
+
+.list_item_4 {
+  color: #ffffff;
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+  text-decoration: none;
+}
+
+.list_item_5 {
+  color: #ffffff;
+  flex: none;
+  order: 4;
+  flex-grow: 0;
+  text-decoration: none;
+}
+
+.list_item_6 {
+  color: #ffffff;
+  flex: none;
+  order: 5;
+  flex-grow: 0;
+}
 
 .menu_buttons {
-  display:flex;
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
   flex-wrap: nowrap;
   align-items: center;
-  font-family: 'Effra',sans-serif;
+  font-family: "Effra", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
@@ -712,24 +714,23 @@ header {
   width: 54px;
   height: 18px;
   background-color: #000000;
-  color: #FFFFFF;
-  margin-right:40px;
-  border:0;
+  color: #ffffff;
+  margin-right: 40px;
+  border: 0;
 }
 
 .button_register {
   width: 120px;
   height: 42px;
-  background-color: #FFFFFF;
-  color:#000000; 
+  background-color: #ffffff;
+  color: #000000;
   border-radius: 40px;
 }
 
 a:hover {
-      color: rgb(43, 10, 232)
-  }
-  
-  a:visited {
-      color: rgb(17, 246, 246);
-  }
+  color: rgb(43, 10, 232);
+}
 
+a:visited {
+  color: rgb(17, 246, 246);
+}
