--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,18 +53,22 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
+  margin-bottom: 40px;
 }
 
 .buttomTekst {
   display: flex;
   justify-content: center;
 }
+
 .buttonGetStarted {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px 32px;
   gap: 10px;
+  margin-right: 20px;
+  margin-left: 100px;
 
   width: 180px;
   height: 57px;
