Применила адаптивную вёрстку для мобильной версии сайта: внесла изменения в код, файлы style.css и adaptive.css

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -663,3 +663,11 @@ a:hover {
 a:visited {
   color: rgb(17, 246, 246);
 }
+
+.open {
+  display: flex !important;
+}
+
+.nav_burger {
+  display: none;
+}
