--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -260,6 +260,7 @@ main span {
 
 .black-group-2 {
   margin: 60px 80px;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -268,6 +269,15 @@ main span {
   z-index: 1;
   width: 340px;
   height: 82px;
+}
+
+.black-group-2::after {
+  content: "";
+  position: absolute;
+  right: 15px;
+  width: 84px;
+  height: 81px;
+  background: linear-gradient(270deg, #030303 54%, rgba(3, 3, 3, 0.60) 100%);
 }
 
 .image-2 {
@@ -285,6 +295,11 @@ main span {
 
 .group-3 {
   margin: 110px 0 142px 24px;
+}
+
+.image-3 {
+  position: relative;
+  z-index: 1;
 }
 
 .image-4 {
