--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -391,6 +391,7 @@ main span {
     width: 1180px;
     display: flex;
     margin: 24px;
+    background-color: #FAFAFA;
 }
 h2{
     font-size: 55px;
@@ -408,41 +409,45 @@ h2{
   width: 800px;
   height: auto;
   margin-left: 200px;
-  margin-top: 100px;
+  margin-top: 20px;
+  background-color: white;
 }
 #pic1{
   float: left;
 }
 #text1{
-  margin-left: 210px;
+  margin-left: 200px;
 }
 #text2{
-  margin-left: 210px;
+  margin-left: 200px;
 }
 .color{
   color: rgb(26, 178, 224);
+  font-size: 14px;
 }
 .tweet2{
   border: 1px solid grey;
   width: 800px;
   height: auto;
   margin-left: 200px;
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: white;
 }
 #pic{
   float: left;
 }
 #text{
-  margin-left: 210px;
+  margin-left: 200px;
 }
 .sign{
   border: 1px solid color grey;
 
 }
 .sign figcaption{
-  margin: 0 auto 5px;
+  margin: 0 auto 2px;
 }
-
+/* блок Лены М конец */
 /* Скрытый input */
 .switch input {
   opacity: 0;
