--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -393,7 +393,7 @@ main span {
     margin: 24px;
     background-color: #FAFAFA;
 }
-h2{
+.brd{
     font-size: 55px;
     font-family: efra "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, sans-serif;
@@ -402,7 +402,10 @@ h2{
     background-color: #FAFAFA;
     width: 1180px;
     height: 70px;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+}
+.img{
+    margin-left: 100px;
 }
 .tweet1{
   border: 1px solid grey;
@@ -410,7 +413,7 @@ h2{
   width: 800px;
   height: auto;
   margin-left: 200px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   background-color: white;
 }
 #pic1{
@@ -445,6 +448,10 @@ h2{
 .sign{
   border: 1px solid white;
   margin-left: 200px;
+}
+.sign_foto{
+  width: 100%;
+  height: 300px;
 }
 .sign figcaption{
   margin: 0 auto 2px;
